apps/api/k8s-manifest/backend-deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withcontext-backend-celery
  namespace: withcontext-backend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: withcontext-backend-celery
  template:
    metadata:
      labels:
        app: withcontext-backend-celery
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: withcontext-backend-celery
          image: 326596634873.dkr.ecr.us-east-2.amazonaws.com/withcontext-backend:celery
          resources:
            limits:
              memory: '3000Mi'
              cpu: '2'
