apps/api/k8s-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withcontext-backend
  namespace: withcontext-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: withcontext-backend
  template:
    metadata:
      labels:
        app: withcontext-backend
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: withcontext-backend
          image: 326596634873.dkr.ecr.us-east-2.amazonaws.com/withcontext-backend:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: '2000Mi'
              cpu: '2'
